Add simple comments

--- a/internal/views/admin/signin.html
+++ b/internal/views/admin/signin.html
@@ -54,7 +54,6 @@
 
 </head>
 <body>
-登录页面
 
 {{/*<div class="alert alert-info alert-dismissible" role="alert">*/}}
 {{/*    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>*/}}
@@ -87,7 +86,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Sign in</button>
+                        <button type="submit" class="btn btn-default">登陆</button>
                         <a href="/register" role="button" class = "btn btn-default">注册</a>
                     </div>
 
