--- a/internal/views/article/show_article.html
+++ b/internal/views/article/show_article.html
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row ">
 {{/*        <div class="col-md-10 col-md-offset-1">*/}}
-        <div class="col-md-12 ">
+        <br class="col-md-12 ">
             <ul class="breadcrumb">
                 <li><a href="/index">Home</a></li>
                 <li class="active">{{.article.ArticleTitle}}</li>
@@ -34,11 +34,12 @@
                 </div>
                 <span class="Create_Time" style="margin-right: 100px;">
                 <span class="glyphicon glyphicon-calendar"></span>{{dateFormat .article.CreatedAt "06-01-02 15:04"}}</span>
+                {{if eq .article_user.Username .user_session}}
                 <a href="/edit_article/{{.article.ID}}">编辑</a>
+                <a href="/delete_article/{{.article.ID}}">删除</a>
+                {{end}}
             </div>
             <hr/>
-
-
 
             <div id="article_content_html">
 
@@ -49,10 +50,26 @@
             </script>
 
             <hr/>
+            <div>
+                <form class="form-horizontal" action="/new_comment/{{.article.ID}}" method="post">
+                    <textarea class="form-control" id="new_article_comment" name = "new_article_comment" style="width:700px; height:100px;"placeholder="写下你的评论..." ></textarea>
+                    <button type="submit" class="btn btn-default" style="margin-left: 646px">提交</button>
+                </form>
+            </div>
+            <h4>全部评论 2</h4></br>
+            <div id="article_comments">
+                {{range $postkey,$postvalue:=.comments}}
+                    {{$postvalue.UserId}}
+                    {{$postvalue.CommentContent}}<br/>
+                    <span style="color: #8c8c8c;">
+                        {{dateFormat $postvalue.CommentDate "06-01-02 15:04"}}
+                    </span>
+                    <hr/>
+                {{end}}
 
-            评论
-            。。。
-        </div>
+            </div>
+
+    </div>
     </div>
 </div>
 
