--- a/internal/views/article/show_article.html
+++ b/internal/views/article/show_article.html
@@ -17,14 +17,14 @@
 <div class="container">
     <div class="row ">
 {{/*        <div class="col-md-10 col-md-offset-1">*/}}
-        <br class="col-md-12 ">
+        <div class="col-md-12 ">
             <ul class="breadcrumb">
                 <li><a href="/index">Home</a></li>
                 <li class="active">{{.article.ArticleTitle}}</li>
             </ul>
             <h3 >{{.article.ArticleTitle}}</h3>
             <div class="row ">
-                <div class="col-md-1 ">
+                <div class="col-md-1 " style="width: 50px;">
                     <img src="{{.article_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown" style="width: 35px;height: 35px;">
 {{/*                    <span class="User_Data">头像</span><br/>*/}}
                 </div>
@@ -56,16 +56,9 @@
                     <button type="submit" class="btn btn-default" style="margin-left: 646px">提交</button>
                 </form>
             </div>
-            <h4>全部评论 2</h4></br>
+            <h4>全部评论 {{.comment_count }}</h4></br>
             <div id="article_comments">
-                {{range $postkey,$postvalue:=.comments}}
-                    {{$postvalue.UserId}}
-                    {{$postvalue.CommentContent}}<br/>
-                    <span style="color: #8c8c8c;">
-                        {{dateFormat $postvalue.CommentDate "06-01-02 15:04"}}
-                    </span>
-                    <hr/>
-                {{end}}
+                {{template "_show_comment.html" .}}
 
             </div>
 
