put the js code in the static/js

--- a/internal/views/admin/index.html
+++ b/internal/views/admin/index.html
@@ -11,84 +11,11 @@
     </script>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
     <script>
-        //分页按钮跳转
-        // function show_user_article_by_page(page){
-        //     $.ajax({url:"/show_user_articles/"+page,success:function(result){
-        //             $("#div1").html(result);
-        //         }});
-        // }
-        //当前页面是哪一页 ，对应的页码变色
-        $(document).ready(function(){
-            //如果页数大于5  第六个以后就显示成。。。 然后再显示最后两页
-            var pageCount = {{.pageCount}};
-            var currentPage = {{.current_page}};
-            $("#index_article_page").html(function () {
-                    var a_h = ""
-                    //上一页
-                    if(currentPage == 1){
-                        a_h = "<li  class=\"previous disabled\"><span><span aria-hidden=\"true\">&laquo;</span></span></li>"
-                    }else{
-                        a_h = "<li><a href=\"/index/"+(currentPage-1)+"\" style=\"cursor:pointer;\" aria-label=\"Previous\"><span aria-hidden=\"true\">&laquo;</span></a></li>"
-                    }
-                    for(var i = 0;i<pageCount;i++){
-                        var c = i+1
-                        var a_active= "<li class = \"active\"><a class =\"user_article_page_a\" style=\"cursor:pointer;\" href=\"/index/"+c+"\">"+c+"</a></li>"
-                        var a_previous = "<li class=\"previous disabled\"><span>...</span></li>"
-                        var a_normal = "<li><a class =\"user_article_page_a\" style=\"cursor:pointer;\" href=\"/index/"+c+"\">"+c+"</a></li>"
-                        //如果页码是当前页码  就设置高亮 li class = "active"
-                        if(c == currentPage){
-                            a_h = a_h+a_active
-                        }else{
-                            //如何总页码大于5   五以后显示 。。。  然后再显示最后两页
-                            if( pageCount > 5){
-                                //如果当前页面小于4  就显示 << 1 2 3 4 5 。。。 13 14 >>
-                                if(currentPage < 4){
-                                    if(c == pageCount || c == pageCount-1){
-                                        a_h = a_h+a_normal
-                                    }else if(c == 6){
-                                        a_h = a_h+a_previous
-                                    }else if(c <= 5){
-                                        a_h = a_h+a_normal
-                                    }
-                                    //如果当前页面大于等于4 小于7  就显示      << 1 2 3 4 5 6 。。。 13 14 >>
-                                }else if(currentPage >= 4 && currentPage <7){
-                                    if(c == pageCount || c == pageCount-1){
-                                        a_h = a_h+a_normal
-                                    }else if(c == currentPage+3){
-                                        a_h = a_h+a_previous
-                                    }else if(c <= currentPage+2){
-                                        a_h = a_h+a_normal
-                                    }
-                                    //如果当前页面大于7  显示 << 1 2 。。5 6 7 8 9 。。。 13 14 >>
-                                }else if(currentPage>=7){
-                                    if(c == pageCount || c == pageCount-1){
-                                        a_h = a_h+a_normal
-                                    }else if(c == 1 || c == 2){
-                                        a_h = a_h+a_normal
-                                    }else if(c == currentPage+3){
-                                        a_h = a_h+a_previous
-                                    }else if(c == currentPage-3){
-                                        a_h = a_h+a_previous
-                                    }else if(c <= currentPage+2 && c >= currentPage-2){
-                                        a_h = a_h+a_normal
-                                    }
-                                }
-                            }else{
-                                a_h = a_h+a_normal
-                            }
-                        }
-                    }
-                    //下一页
-                    if(currentPage == pageCount){
-                        a_h = a_h+"<li class=\"previous disabled\"><span><span aria-hidden=\"true\">&raquo;</span></span></li>"
-                    }else{
-                        a_h = a_h+"<li><a href=\"/index/"+(currentPage+1)+"\" style=\"cursor:pointer;\" aria-label=\"Next\"><span aria-hidden=\"true\">&raquo;</span></a></li>"
-                    }
-                    return a_h
-                }
-            );
-        });
+        var pageCount = {{.pageCount}};
+        var currentPage = {{.current_page}};
     </script>
+    <!-- 分页 -->
+    <script src="/static/js/index_articles.js"></script>
 </head>
 <body>
 
@@ -154,111 +81,6 @@
 
     <nav aria-label="Page navigation">
         <ul id = "index_article_page" class="pagination">
-{{/*            {{if eq .Previous_page 0}}*/}}
-{{/*                <li  class="previous disabled">*/}}
-{{/*                    <span>*/}}
-{{/*                        <span aria-hidden="true">&laquo;</span>*/}}
-{{/*                    </span>*/}}
-{{/*                </li>*/}}
-{{/*            {{else}}*/}}
-{{/*                <li>*/}}
-{{/*                    <a href="/index/{{.Previous_page }}" aria-label="Previous">*/}}
-{{/*                        <span aria-hidden="true">&laquo;</span>*/}}
-{{/*                    </a>*/}}
-{{/*                </li>*/}}
-{{/*            {{end}}*/}}
-{{/*            <!-- 页面总数转换为数组 用于显示 页码 -->*/}}
-{{/*            {{$pageCounts := PageCount .pageCount}}*/}}
-{{/*            <!-- int类型的页数 -->*/}}
-{{/*            {{$pageCountInt := len $pageCounts}}*/}}
-{{/*            <!--  current_page 换成$ 的形式-->*/}}
-{{/*            {{$current_page_s := .current_page}}*/}}
-{{/*            <!--  分页中 。。。  在哪里 做对应的处理-->*/}}
-{{/*            {{ $defaultView := 3}}*/}}
-{{/*            {{ $defaultView2 := 7}}*/}}
-{{/*            <!--  class = "active" -->*/}}
-{{/*            {{$IsShowLastPage:= IsShowLastPage $pageCountInt}}*/}}
-{{/*            {{range $pagekey,$pagevalue:=$pageCounts}}*/}}
-{{/*                {{$pagevalueInt := StrToInt $pagevalue}}*/}}
-{{/*                {{if gt $pageCountInt 8}}*/}}
-{{/*                    <!--  需要在这里判断  前面怎么变成 。。。  -->*/}}
-{{/*                    {{if ge $current_page_s 7}}*/}}
-{{/*                        {{$defaultView2 = Superposition2 $current_page_s }}*/}}
-{{/*                        {{$defaultView = Superposition $current_page_s }}*/}}
-{{/*                        {{if le  $pagevalueInt 2}}*/}}
-{{/*                            {{if eq $pagevalueInt $current_page_s}}*/}}
-{{/*                                <li class = "active"><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                            {{else}}*/}}
-{{/*                                <li><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                            {{end}}*/}}
-{{/*                        {{end}}*/}}
-{{/*                        {{if gt  $pagevalueInt  $defaultView2}}*/}}
-{{/*                            {{if eq $pagevalueInt $current_page_s}}*/}}
-{{/*                                <li class = "active"><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                            {{else}}*/}}
-{{/*                                <li><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                            {{end}}*/}}
-{{/*                        {{end}}*/}}
-{{/*                        {{if eq $pagevalueInt $defaultView2}}*/}}
-{{/*                            <li class="previous disabled"><span>...</span></li>*/}}
-{{/*                        {{end}}*/}}
-{{/*                        {{if eq $pagevalueInt $defaultView}}*/}}
-{{/*                            {{if ge $defaultView $pageCountInt}}*/}}
-{{/*                            {{else}}*/}}
-{{/*                                <li class="previous disabled"><span>...</span></li>*/}}
-{{/*                            {{end}}*/}}
-{{/*                        {{end}}*/}}
-{{/*                    {{else}}*/}}
-{{/*                        <!-- 如果当前页面小于7  显示的页码就+3 -->*/}}
-{{/*                        {{$defaultView = Superposition $current_page_s }}*/}}
-{{/*                        {{if lt  $pagevalueInt  $defaultView}}*/}}
-{{/*                            {{if eq  $current_page_s $pagevalueInt}}*/}}
-{{/*                                <li class = "active"><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                            {{else}}*/}}
-{{/*                                <li><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                            {{end}}*/}}
-{{/*                        {{end}}*/}}
-{{/*                        {{if eq $pagevalueInt $defaultView}}*/}}
-{{/*                            <li class="previous disabled"><span>...</span></li>*/}}
-{{/*                        {{end}}*/}}
-{{/*                        {{if eq $pagevalueInt $pageCountInt}}*/}}
-{{/*                            {{if ge $current_page_s $IsShowLastPage}}*/}}
-
-{{/*                            {{else}}*/}}
-{{/*                                {{if eq $pagevalueInt $current_page_s}}*/}}
-{{/*                                    <li class = "active"><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                                {{else}}*/}}
-{{/*                                    <li><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                                {{end}}*/}}
-{{/*                            {{end}}*/}}
-
-{{/*                        {{end}}*/}}
-{{/*                    {{end}}*/}}
-
-{{/*                {{else}}*/}}
-{{/*                    {{if eq $pagevalueInt $current_page_s}}*/}}
-{{/*                        <li class = "active"><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                    {{else}}*/}}
-{{/*                        <li><a href="/index/{{$pagevalue}}">{{$pagevalue}}</a></li>*/}}
-{{/*                    {{end}}*/}}
-{{/*                {{end}}*/}}
-
-{{/*            {{end}}*/}}
-
-{{/*            {{if eq .current_page .pageCount}}*/}}
-{{/*                <li class="previous disabled">*/}}
-{{/*                    <span>*/}}
-{{/*                        <span aria-hidden="true">&raquo;</span>*/}}
-{{/*                    </span>*/}}
-{{/*                </li>*/}}
-{{/*            {{else}}*/}}
-{{/*                <li>*/}}
-{{/*                    <a href="/index/{{.next_page }}" aria-label="Next">*/}}
-{{/*                        <span aria-hidden="true">&raquo;</span>*/}}
-{{/*                    </a>*/}}
-{{/*                </li>*/}}
-{{/*            {{end}}*/}}
-
         </ul>
     </nav>
 </div>
