--- a/internal/views/admin/navbar.html
+++ b/internal/views/admin/navbar.html
@@ -27,7 +27,7 @@
 {{/*                            <li class="divider"></li>*/}}
 {{/*                            <li><a href="#"></a></li>*/}}
 {{/*                            <li class="divider"></li>*/}}
-{{/*                            <li><a href="#">我的李信</a></li>*/}}
+{{/*                            <li><a href="#">xx</a></li>*/}}
                         </ul>
                     </li>
                 </ul>
