--- a/internal/views/admin/register.html
+++ b/internal/views/admin/register.html
@@ -6,59 +6,13 @@
     <title>注册</title>
     <link href="/static/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/article.css" rel="stylesheet">
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
-    </script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"/>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- 下面两个是jquery第三方库 用于注册校验 -->
     <script src="http://static.runoob.com/assets/jquery-validation-1.14.0/lib/jquery.js"></script>
     <script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/jquery.validate.min.js"></script>
-
-    <script>
-        //返回登陆
-        // function back_to_login(){
-        //     window.location.href="/signin";
-        // }
-        $().ready(function() {
-            // 在键盘按下并释放及提交后验证提交表单
-            $("#registerForm").validate({
-                rules: {
-                    username: {
-                        required: true,
-                        minlength: 2
-                    },
-                    password: {
-                        required: true,
-                        minlength: 5
-                    },
-                    confirm_password: {
-                        required: true,
-                        minlength: 5,
-                        equalTo: "#password"
-                    },
-                    email: {
-                        required: true,
-                        email: true
-                    }
-                },
-                messages: {
-                    username: {
-                        required: "请输入用户名",
-                        minlength: "用户名必需由两个字母组成"
-                    },
-                    password: {
-                        required: "请输入密码",
-                        minlength: "密码长度不能小于 5 个字母"
-                    },
-                    confirm_password: {
-                        required: "请输入密码",
-                        minlength: "密码长度不能小于 5 个字母",
-                        equalTo: "两次密码输入不一致"
-                    },
-                    email: "请输入一个正确的邮箱"
-                }
-            });
-        });
-    </script>
+    <!-- 注册校验 -->
+    <script src="/static/js/register.js"></script>
     <style>
         .error{
             color: #ff0000;
