--- a/internal/views/user/user_setting.html
+++ b/internal/views/user/user_setting.html
@@ -8,8 +8,7 @@
     <link href="/static/css/article.css" rel="stylesheet">
     <link href="/static/css/blog_hone.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
-    </script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- 下面两个是jquery第三方库 用于注册校验 -->
     <script src="http://static.runoob.com/assets/jquery-validation-1.14.0/lib/jquery.js"></script>
