--- a/internal/views/article/show_article.html
+++ b/internal/views/article/show_article.html
@@ -8,8 +8,7 @@
     <link href="/static/css/article.css" rel="stylesheet">
     <link href="/static/css/blog_hone.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
-    </script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
