--- a/internal/views/user/show_user.html
+++ b/internal/views/user/show_user.html
@@ -7,11 +7,10 @@
     <link href="/static/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/blog_hone.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
-    </script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
-
     <script>
+        //ajax跳转 显示用户的文章
         $(document).ready(function(){
             $("#show_user_articles").click(function(){
                 $.ajax({url:"/show_user_articles/1",success:function(result){
