--- a/internal/views/admin/foot.html
+++ b/internal/views/admin/foot.html
@@ -1,7 +1,20 @@
 {{define "foot.html"}}
-
-    <div style = "text-align: center;color: #888888;">
-        <p>王小强</p>
-        <p>这个是这个网站的说明</p>
+<style>
+    .xiaoacao_footer {
+        height: 30px;
+        line-height: 35px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        background-color: rgb(40, 40, 45);
+        color: #ffffff;
+        font-family: Arial;
+        font-size: 14px;
+        letter-spacing: 1px;
+    }
+</style>
+    <div class="xiaoacao_footer">
+        <p>Copyright©2020  王小强  </p>
     </div>
 {{end}}
