Submit once in a unified way

--- a/internal/views/admin/foot.html
+++ b/internal/views/admin/foot.html
@@ -1,4 +1,6 @@
 {{define "foot.html"}}
+    <script src="/static/js/magical_background.js"></script>
+
 <style>
     .xiaoacao_footer {
         height: 30px;
