--- a/internal/views/admin/navbar.html
+++ b/internal/views/admin/navbar.html
@@ -22,7 +22,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">笑话</a></li>
-                            <li><a href="#">便签</a></li>
+                            <li><a href="/batch/index/1">解绑记录</a></li>
                             <li><a href="/picture_recognition">ICCID图片识别</a></li>
 {{/*                            <li class="divider"></li>*/}}
 {{/*                            <li><a href="#"></a></li>*/}}
@@ -39,7 +39,6 @@
 
                             <ul class="dropdown-menu">
                                 <li><a href="/user/{{.user_session}}">我的主页</a></li>
-                                <li><a href="#">收藏的文章</a></li>
                                 <li><a href="#">消息</a></li>
                                 <li><a href="/user_setting">设置</a></li>
                                 <li><a href="/logout">退出</a></li>
@@ -56,9 +55,9 @@
                 </form>
 
                 <!-- 搜索文章 -->
-                <form class="navbar-form navbar-right" role="search">
+                <form class="navbar-form navbar-right" action="/search_article/1" method="get" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="输入文章关键字">
+                        <input type="text" class="form-control" name="key_word" placeholder="输入文章关键字">
                     </div>
                     <button type="submit" class="btn btn-default">提交</button>
                 </form>
