--- a/internal/views/user/show_user.html
+++ b/internal/views/user/show_user.html
@@ -18,6 +18,26 @@
                     }});
             });
         });
+
+        //ajax跳转 显示用户收藏的文章
+        $(document).ready(function(){
+            $("#show_user_collect_articles").click(function(){
+                $.ajax({url:"/show_user_collect_articles/1",success:function(result){
+                        $("#div1").html(result);
+                    }});
+            });
+        });
+
+        $(document).ready(function(){
+            $("#show_user_articles").click(function(){
+                $("#show_user_articles_li").attr("class","active");
+                $("#show_user_collect_articles_li").attr("class","");
+            });
+            $("#show_user_collect_articles").click(function(){
+                $("#show_user_collect_articles_li").attr("class","active");
+                $("#show_user_articles_li").attr("class","");
+            });
+        });
     </script>
 </head>
 <body>
@@ -41,10 +61,11 @@
     <div class="row ">
         <div class="col-md-10">
            <br/>
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a id = "show_user_articles" style="cursor:pointer;">我的文章</a></li>
+            <ul class="nav nav-tabs" id = "1222">
+                <li role="presentation" class="active" id = "show_user_articles_li"><a id = "show_user_articles" style="cursor:pointer;">我的文章</a></li>
                 <li role="presentation"><a href="#">我的动态</a></li>
                 <li role="presentation"><a href="#">最新评论</a></li>
+                <li role="presentation" class="" id = "show_user_collect_articles_li"><a id = "show_user_collect_articles" style="cursor:pointer;">我的收藏</a></li>
             </ul>
             <br/>
             <div class="col-md-10">
