remove the background style

--- a/internal/views/admin/foot.html
+++ b/internal/views/admin/foot.html
@@ -1,5 +1,5 @@
 {{define "foot.html"}}
-    <script src="/static/js/magical_background.js"></script>
+{{/*    <script src="/static/js/magical_background.js"></script>*/}}
 
 <style>
     .xiaoacao_footer {
