--- a/internal/views/utils/show_unbind_batch_detail.html
+++ b/internal/views/utils/show_unbind_batch_detail.html
@@ -15,11 +15,8 @@
         var unbind_status = {{.unbind_batch.Status}}
     </script>
 
-
-
 </head>
 <body>
-
 {{template "navbar.html" .}}
 <div class="container">
     <div class="row">
@@ -32,7 +29,7 @@
             </button>
             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#exampleModal2">修改批次状态
             </button>
-            <a href="/export_data/{{.unbind_batch.ID}}" role="button" class = "btn btn-default">导出卡号</a>
+            <a href="/export_data/{{.unbind_batch.ID}}" role="button" class = "btn btn-default">导出卡号为excel</a>
             <br/><br/>
             <table class="table table-hover">
                 <h3>{{.carrier.Name}}--本批次卡号列表</h3>
@@ -63,7 +60,7 @@
                         </td>
                         <script>
                             $(function (){
-                                a = "<img  id = 'imm' src = '{{safeURL $postvalue.EquipmentPhoto}}' style='width:200'>"
+                                a = "<img  id = 'imm' src = '{{$postvalue.EquipmentPhoto}}' style='width:200px'>"
                                     if (a == ""){
                                         a = ""
                                     }
@@ -121,7 +118,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <input id="testFile" type="file">
+                        <input id="testFile" type="file" name = "file">
                         <hr>
                         <img id="testImg"  style="max-height: 300px; height: 8em; min-width:8em;">
                         <textarea id="testArea" style="width: 100%;height: 30em;" name = "image_base64" hidden></textarea>
